AJax'd the view list stuff. A noticable improvement.

--- a/dada/DADA/Template/templates/bouncing_search_results_widget.tmpl
+++ b/dada/DADA/Template/templates/bouncing_search_results_widget.tmpl
@@ -5,7 +5,7 @@
 
 
 <!-- tmpl_loop search_results -->
-<div style="<!-- tmpl_if __odd__ -->background-color:#fff;<!-- tmpl_else -->background-color:#ccf;<!--/tmpl_if-->border:1px solid black;">
+<div <!-- tmpl_if __odd__ -->class="alt"<!-- tmpl_else -->style="background:#fff"<!-- /tmpl_if -->>
 	<div style="padding:5px">
 		<h2>
 			Date: 
