--- a/dada/DADA/Template/templates/css/default.css
+++ b/dada/DADA/Template/templates/css/default.css
@@ -815,6 +815,9 @@ text-decoration: none;
 .stripedtable tr.alt td {
 	background-color: #ededed;
 }
+div.alt { 
+	background-color: #ededed;	
+}
 
 .stripedtable a {
 	color: #666;
