--- a/dada/DADA/Template/templates/list_search_form_widget.tmpl
+++ b/dada/DADA/Template/templates/list_search_form_widget.tmpl
@@ -1,8 +1,8 @@
 <!-- begin list_search_form_widget.tmpl --> 
-    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;">
-      <input type="text"   name="query" id="query" class="small_input" value="<!-- tmpl_var query default="" escape="HTML" -->" />
+    <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;" id="search_form" onsubmit="search_list();return false;">
+      <input type="text"   name="query" id="search_query" class="small_input" value="<!-- tmpl_var query default="" escape="HTML" -->" />
       <input type="hidden" name="f"    value="view_list" />
       <input type="hidden" name="type" value="<!-- tmpl_var type default="list" -->" />
-      <input type="submit" class="small_button" value="Search <!-- tmpl_var type_title escape="HTML" -->" />
+      <input type="button" class="small_button" value="Search <!-- tmpl_var type_title escape="HTML" -->" onclick="search_list();return false;" />
     </form>
 <!-- end list_search_form_widget.tmpl --> 
