--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -2,6 +2,60 @@
 
 <!-- tmpl_set name="title" value="Membership &#187; View" -->
 
+<script type="text/javascript">
+//<![CDATA[
+
+	
+	
+Event.observe(window, 'load', function() {
+	view_list_viewport();
+	
+});
+
+function view_list_viewport(){ 	
+	new Ajax.Updater(
+		'view_list_viewport', '<!-- tmpl_var S_PROGRAM_URL -->', 
+		{ 
+		    method: 'post', 
+			parameters: {
+				f:         'view_list',
+				mode:      'viewport', 
+				type:      $F('type'),
+				page:      $F('page'),			
+				query:     $F('query'),				
+				order_by:  $F('order_by'), 				
+				order_dir: $F('order_dir'),
+
+			},
+		onCreate: 	 function() {
+			$('view_list_viewport_loading').update('<p class="alert">Loading...</p>');
+		},
+		onComplete: 	 function() {
+			$('view_list_viewport_loading').update('<p class="alert">&nbsp;</p>');
+			//Effect.BlindDown('view_list_viewport');
+		}	
+	});
+}
+
+function turn_page(page_to_turn_to) { 
+	Form.Element.setValue('page', page_to_turn_to) ; 
+	view_list_viewport();
+}
+function change_type(type_to_go_to) { 
+	Form.Element.setValue('type', type_to_go_to) ; 
+	Form.Element.setValue('page', 1) ; 
+	view_list_viewport();
+}
+function search_list(){ 
+	Form.Element.setValue('page', 1) ; 
+	Form.Element.setValue('query', $F('search_query')) ; 
+	view_list_viewport();
+}
+
+//]]>
+</script>
+
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title -->
@@ -10,292 +64,20 @@
 </div>
 
 
+<form id="viewport_values">
+	<input type="hidden" id="type"      name="type"      value="<!-- tmpl_var type escape="HTML" -->" />	
+	<input type="hidden" id="page"      name="page"      value="<!-- tmpl_var page escape="HTML"  -->" />	
+	<input type="hidden" id="query"     name="query"     value="<!-- tmpl_var query escape="HTML"  -->" />	      
+  	<input type="hidden" id="order_by"  name="order_by"  value="<!-- tmpl_var order_by escape="HTML"  -->" />	      
+  	<input type="hidden" id="order_dir" name="order_dir" value="<!-- tmpl_var order_dir escape="HTML"  -->" />	      
+</form>
 
 
 <!-- tmpl_include view_list_modalmenu_widget.tmpl -->
 
-<!-- tmpl_include list_type_switch_widget.tmpl -->
-
-<!-- tmpl_if comment --> 
-
-
-					<!-- tmpl_if EXPR="(type eq 'list')" -->
-	
-					<!--/tmpl_if-->
-
-					<!-- tmpl_if EXPR="(type eq 'authorized_senders')" -->
-	
-						<p>
-						 This shows all email addresses that are allowed to send messages to the list (via the Dada Bridge Plugin) other than the list owner (for announce-only lists) and without moderation. 
-						</p>
-	
-					<!--/tmpl_if-->
+<div id="view_list_viewport_loading" style="margin:0; padding:0"><p class="alert">&nbsp;</p></div>
+<div id="view_list_viewport"></div> 
 
 
-					<!-- tmpl_if EXPR="(type eq 'white_list')" -->
-	
-
-						<p>
-						 Your white list is a list of email addresses that are allowed to subscribe to your list.
-						</p>
-	
-					<!--/tmpl_if-->
-
-					<!-- tmpl_if EXPR="(type eq 'black_list')" -->
-
-						<p class="alert">
-						 Your Black List is a set of rules that say who is not allowed to subscribe to 
-						 your Subscribers Mailing List . You may add both complete email addresses  (you@example.com) or 
-						 part of an email address (example.com) to you Black List.</p>
-	
-						<p class="alert">Parts of addresses will match whole addresses - "example.com" will match, "you@example.com" and, "someone.else@example.com"</p>
-		
-						<!-- tmpl_if can_use_global_black_list --> 
-		
-							<!-- tmpl_if GLOBAL_BLACK_LIST -->
-			
-								<p class="positive">
-								 * The Global Black List has been enabled.
-								</p>
-			
-							<!--/tmpl_if-->
-		
-						<!--/tmpl_if-->
-	
-						<!-- tmpl_if can_use_global_unsubscribe --> 
-		
-							<!-- tmpl_if GLOBAL_UNSUBSCRIBE -->
-			
-								<p class="positive">
-								 * Global Unsubscribe has been enabled.
-								</p>
-			
-							<!--/tmpl_if-->
-		
-						<!--/tmpl_if-->
-	
-						<!-- tmpl_if black_list_changes_done -->
-	
-							<p class="positive">
-							 Your changes to the Black List settings were successful!
-							</p>
-		
-						<!--/tmpl_if-->
-	
-					<!--/tmpl_if-->
-
-
-					<!-- tmpl_if EXPR="(type eq 'bounced_list')" -->
-	
-
-						<p>
-						 These addresses were Subscribers, that had been routinely bouncing messages. They have been moved here from your Subscribers list, after reaching the limit of message bounces.</p> 
-						<p>
-							You may either move these addresses back to your Subscribers list, or permanently remove them from your mailing list. Click on any address to view the bouncing history of that address.
-						</p>
-	
-					<!-- /tmpl_if -->
-<!-- /tmpl_if -->
-
-
-<!-- tmpl_unless total_num -->
-	
-	<!-- tmpl_if query --> 
-			<p class="alert">
-				No Results were found. <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list;type=<!-- tmpl_var type -->">Clear Search</a>
-			</p>
-			<p><label for="query">Search Again:</label></p> 
-			<!-- tmpl_include list_search_form_widget.tmpl -->
-			
-			
-			
-	<!-- tmpl_else --> 
-	
-		<p class="alert">
-		 There are currently no <!-- tmpl_var type_title -->.
-	
-		    <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'white_list'))" -->
-		
-				<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=add&amp;type=<!-- tmpl_var type -->">
-					<!-- tmpl_if EXPR="(type eq 'list')" -->
-							Invite
-							<!-- tmpl_if list_settings.enable_mass_subscribe -->
-					/ Add
-							<!-- /tmpl_if -->
-						<!-- tmpl_else --> 
-							Add
-						<!-- /tmpl_if -->
-		    	</a>
-		   	<!-- /tmpl_if -->
-		</p>
-	
-	<!-- /tmpl_if --> 
-	
-<!-- tmpl_else -->
-
-	<table class="stripedtable">
-	 <tr>
-	  <td valign="bottom">
-	   <br />
-
-
-	<!-- tmpl_if query --> 
- 		Search Results 
-	
-			<strong>
-		     <!-- tmpl_var first -->
-		    </strong>
-		    to 
-		    <strong>
-		     <!-- tmpl_var last -->
-		    </strong>
-			of
-			<strong>
-				<!-- tmpl_var total_num --> 
-		   </strong>
-		
-		  for, <em><!-- tmpl_var query escape=HTML --></em>
-		
-
-
-
-	<!-- tmpl_else --> 
-	
-   	 <!-- tmpl_var type_title -->
-	    <strong>
-	     <!-- tmpl_var first -->
-	    </strong>
-	    to 
-	    <strong>
-	     <!-- tmpl_var last -->
-	    </strong>
-		of
-		<strong>
-			<!-- tmpl_var num_subscribers --> 
-	   </strong>
-
-	
-		<!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'white_list'))" -->
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=add&amp;type=<!-- tmpl_var type -->">
-					<!-- tmpl_if EXPR="(type eq 'list')" -->
-						Invite
-						<!-- tmpl_if list_settings.enable_mass_subscribe -->
-				/ Add
-						<!-- /tmpl_if -->
-					<!-- tmpl_else --> 
-						Add
-					<!-- /tmpl_if -->
-	    	</a>...
-	   	<!-- /tmpl_if -->
-
-	<!-- /tmpl_if -->
-	
-
-	
-	  </td>
-	
-	<td align="center" valign="bottom">
-		<br />
-		<!-- tmpl_include view_list_slide_nav_widget.tmpl -->
-	</td>
-
-	
-	<td align="right" valign="bottom">
-		<!-- tmpl_include list_search_form_widget.tmpl --> 
-	</td> 
-	
-	 </tr>
-	</table>
-
-
-	<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
-	
-	 	<!-- tmpl_include view_list_table_widget.tmpl --> 
-	
-	<table class="stripedtable">
-	  <tr>
-	   		<td width="25">
-	    		<input type="checkbox" onClick="toggleCheckBoxes(this, 'address')"/>
-	   		</td>
-
-		
-			<td>
-				
-	
-	<!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'white_list'))" -->
-
-		 <input type="hidden" name="process" value="delete" />
-		 <input type="hidden" name="f"       value="remove_subscribers" />
-		 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-		<!-- tmpl_if expr="(type eq 'list')" -->
-		 	<input type="submit" class="small_button" value="&#8592; Unsubscribe Checked Subscribers" />
-		<!-- tmpl_else --> 
-			<input type="submit" class="small_button" value="&#8592; Remove Checked <!-- tmpl_var type_title -->" />
-		<!-- /tmpl_if --> 
-		
-	<!-- /tmpl_if -->
-
-	<!-- tmpl_if EXPR="(type eq 'sub_request_list')" -->
-
-		 <input type="hidden" name="f"       value="subscription_requests" />
-		 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-		 <input type="submit" name="process" class="small_button" value="Approve Checked Subscription Requests" />
-		 <input type="submit" name="process" class="small_button" value="Deny Checked Subscription Requests" />
-
-	<!-- /tmpl_if -->
-	
-	<!-- tmpl_if EXPR="(type eq 'bounced_list')" -->
-	
-			<input type="hidden" name="f"     value="process_bouncing_addresses" />
-			 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-			
-			 <input type="submit" name="process" class="small_button"  value="&#8594; Move Selected Bouncing Address Back to Subscribers" />
-			 <input type="submit" name="process" class="small_button"  value="&#8855; Remove Selected Bouncing Addresses" />
-			
-	<!-- /tmpl_if -->
-	
-	</form>
-	<!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'white_list'))" -->
-		<!-- tmpl_unless query -->
-			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" style="display:inline;margin:0">
-			 <input type="hidden" name="f"       value="remove_all_subscribers" />
-			 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-			<!-- tmpl_if expr="(type eq 'list')" -->
-			  <input type="submit" class="small_button" value="&#8656; Unsubscribe ALL <!-- tmpl_var type_title -->" onclick="return unsubscribeAllSubscribers(this.form, '<!-- tmpl_var type_title -->');"   />
-			<!-- tmpl_else --> 
-			  <input type="submit" class="small_button" value="&#8656; Remove ALL <!-- tmpl_var type_title -->" onclick="return unsubscribeAllSubscribers(this.form, '<!-- tmpl_var type_title -->');"   />
-			<!-- /tmpl_if --> 
-			</form>
-		<!-- /tmpl_unless -->
-	<!-- /tmpl_if -->
-	
-</td>
-
-<!-- tmpl_if total_num -->
-	<!-- tmpl_if EXPR="(type eq 'black_list')" -->
-		<!-- tmpl_if can_filter_subscribers_through_blacklist --> 
-			<!-- tmpl_unless query --> 
-				<td>
-				 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="blacklist_filter_form">
-				  <input type="hidden" name="f" value="filter_using_black_list" />
-				  <div class="buttonfloat">
-				   <input type="submit" class="small_button" value="Filter Your Subscribers Through The Black List..." />
-				  </div>
-				 </form>
-				</td>
-			<!-- /tmpl_unless -->
-		<!--/tmpl_if-->
-	<!--/tmpl_if-->
-<!--/tmpl_if-->
-
-<td align="right">
-	<!-- tmpl_include list_download_widget.tmpl -->	
-</td>
-
-
-			</tr> 
-		</table>
-
-<!-- /tmpl_unless --> 
 
 <!-- end view_list_screen.tmpl -->
