--- a/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
@@ -218,7 +218,7 @@ Email Address Protection
    <a href="http://www.google.com/recaptcha/mailhide/" target="_blank">
     (More Info)
    </a> <!-- tmpl_unless can_use_recaptcha_mailhide -->
-	      <span class="error">Disabled. Make sure have to configure reCAPTCHA MailHide in the Dada::Config.pm file and the Perl CPAN module Captcha::reCAPTCHA::Mailhide is installed..</span>
+	      <span class="error">Disabled. Make sure have to configure reCAPTCHA MailHide in the .dada_config file and the Perl CPAN module Captcha::reCAPTCHA::Mailhide is installed..</span>
         <!-- /tmpl_unless --> 
   </td>
  </tr>
