--- a/dada/DADA/Template/templates/change_password_screen.tmpl
+++ b/dada/DADA/Template/templates/change_password_screen.tmpl
@@ -8,10 +8,12 @@
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div> 
 
+<div class="clearskiesbox">
 <p>
  After you have changed your Mailing List Password, you will 
  be required to log back into your Mailing List control panel, using your new Mailing  List Password.
 </p>
+</div>
 
 <form name="default_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
 
