--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -1,7 +1,4 @@
-<?xml version="1.0"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
  <head>
 
   <meta http-equiv="Pragma"  content="no-cache" />
@@ -10,19 +7,27 @@
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
  
   <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/default.css" type="text/css" media="screen" />
+<!-- tmpl_if load_modalbox --> 
   <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/modalbox.css" type="text/css"  media="screen" />
+<!-- /tmpl_if -->
 
   <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/dada_mail_admin_js.js"         type="text/javascript"></script>
   <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/prototype.js"                  type="text/javascript"></script>
   <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/scriptaculous.js?load=builder,effects" type="text/javascript"></script>
-  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js"                   type="text/javascript"></script>
 
-<!-- tmpl_if FCKEDITOR_URL --> 
-	<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js" type="text/javascript"></script>
-<!-- /tmpl_if -->
-<!-- tmpl_if CKEDITOR_URL --> 
-	<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"  type="text/javascript" ></script>
+<!-- tmpl_if load_modalbox --> 
+  <script src="<!-- tmpl_var S_PROGRAM_URL -->/js/modalbox.js"                   type="text/javascript"></script>
 <!-- /tmpl_if --> 
+
+<!-- tmpl_if load_wysiwyg_editor --> 
+	<!-- tmpl_if FCKEDITOR_URL --> 
+		<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js" type="text/javascript"></script>
+	<!-- /tmpl_if -->
+	<!-- tmpl_if CKEDITOR_URL --> 
+		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"  type="text/javascript" ></script>
+	<!-- /tmpl_if --> 
+<!-- /tmpl_if --> 
+
 </head>
  
  <body id="DadaAdmin">
