--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -1,6 +1,7 @@
 <!-- begin send_url_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Send a Webpage" -->
+<!-- tmpl_set name="load_wysiwyg_editor" value="1" -->
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
