--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -1,6 +1,9 @@
 <!-- being sending_preferences_screen.tmpl --> 
 
 <!-- tmpl_set name="title" value="Mailing Sending &#187; Sending Preferences" -->
+<!-- tmpl_set name="load_modalbox" value="1" -->
+
+
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
