Fix to get the HTML to validate

--- a/dada/DADA/Template/templates/newsfeed_widget.tmpl
+++ b/dada/DADA/Template/templates/newsfeed_widget.tmpl
@@ -14,7 +14,7 @@
        atom
       </a>
       
-      <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_feed.png/" />     
+      <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_feed.png/" alt="rss/atom" title="rss/atom"/>     
      )
     </p>
         
