Closes #249 Text characters not converted to HTML in archive subjects

--- a/dada/DADA/Template/templates/archive_list_widget.tmpl
+++ b/dada/DADA/Template/templates/archive_list_widget.tmpl
@@ -10,7 +10,7 @@
 		  <p>
 		   <strong>
 		    <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var uri_escaped_list -->/<!-- tmpl_var id -->/">
-		     <!-- tmpl_var subject -->
+		     <!-- tmpl_var subject escape="HTML" -->
 		    </a>
 		   </strong>
 		   <br />
