--- a/dada/DADA/Template/templates/archive_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin archive_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="<!-- tmpl_var subject -->" -->
+<!-- tmpl_set name="title" value="<!-- tmpl_var subject escape=HTML -->" -->
 
 <!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
 
@@ -55,7 +55,7 @@
 		   <strong>
 		    Date:
 		   </strong>
-		   <!-- tmpl_var header_date -->
+		   <!-- tmpl_var header_date escape="HTML" -->
 		   
 	<!--/tmpl_if -->
 	
@@ -65,20 +65,20 @@
 		   <strong>
 		    Subject:
 		   </strong>
-		   <!-- tmpl_var header_subject -->
+		   <!-- tmpl_var header_subject  escape="HTML"  -->
 		   
 	<!--/tmpl_if -->
 	
 	<!-- tmpl_if in_reply_to_id -->
 		
-		<!-- tmpl_if in_reply_to_subject -->
+		<!-- tmpl_if in_reply_to_subject  -->
 			   
 			   <br />
 			   <strong>
 			    In-Reply-To:
 			   </strong>
 			   <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list -->/<!-- tmpl_var in_reply_to_id -->/">
-			    <!-- tmpl_var in_reply_to_subject -->
+			    <!-- tmpl_var in_reply_to_subject  escape="HTML"  -->
 			   </a>
 			   
 		<!-- /tmpl_if -->
