--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -3,6 +3,7 @@
 
   <meta http-equiv="Pragma"  content="no-cache" />
   <meta http-equiv="Expires" content="-1" />
+ <meta http-equiv="Content-Type" content="text/html; charset=<!-- tmpl_var HTML_CHARSET -->">
 
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
  
@@ -33,7 +34,7 @@
  <body id="DadaAdmin">
    <div id="Header">
 	<a href="<!-- tmpl_var PROGRAM_URL -->">
-		<img src="<!-- tmpl_var S_PROGRAM_URL -->/img/dada_mail_logo_sm.png/" />
+		<img src="<!-- tmpl_var S_PROGRAM_URL -->/img/dada_mail_logo.png/" alt="<!-- tmpl_var PROGRAM_NAME -->" />
     </a>
 	<span id="Title">
 		Logged in as
