--- a/dada/DADA/Template/templates/delete_email_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_email_screen.tmpl
@@ -20,10 +20,11 @@
 <!-- tmpl_if GLOBAL_UNSUBSCRIBE -->
 	
 	<!-- tmpl_if can_use_global_unsubscribe --> 
-	
-		<p class="positive">
-		 * Global Unsubscribe has been enabled.
+		<div class="badweatherbox">
+		<p>
+		 Global Unsubscribe has been enabled.
 		</p>
+	</div>
 		
 	<!--/tmpl_if-->
 	
