--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -581,9 +581,11 @@ Invalid Email Addresses
 <!-- tmpl_if not_subscribed --> 
 	<!-- ... -->
 <!-- tmpl_else --> 
-	<p class="alert"> 
+	<div class="badweatherbox">
+	<p> 
 		No addresses have passed verification. 
 	</p> 
+</div>
 <!-- /tmpl_if -->
 
 
